erDiagram
    USERS ||--o{ COMPLAINT : creates
    CATEGORIES ||--o{ COMPLAINT : classifies
    COMPLAINT ||--o{ MESSAGES : has
    USERS ||--o{ MESSAGES : sends
    COMPLAINT ||--o| ASSIGNMENTS : has
    USERS ||--o{ ASSIGNMENTS : receives
    COMPLAINT ||--o| RATINGS : has
    USERS ||--o{ RATINGS : gives
    USERS ||--o{ PASSWORD_RESET_TOKENS : owns

    USERS {
        bigint user_id PK
        string name
        string email
        string password
        string role
        text specialization
    }

    COMPLAINT {
        bigint complaint_id PK
        string title
        text description
        string status
        string priority
        bigint user_id FK
        bigint category_id FK
    }

    MESSAGES {
        bigint message_id PK
        text content
        boolean is_solved
        boolean is_solution_proposal
        boolean is_system_message
        bigint complaint_id FK
        bigint user_id FK
    }

    ASSIGNMENTS {
        bigint assignment_id PK
        bigint complaint_id FK
        bigint user_id FK
    }

    RATINGS {
        bigint rating_id PK
        int score
        text feedback
        bigint complaint_id FK
        bigint staff_id FK
        bigint user_id FK
    }

    CATEGORIES {
        bigint category_id PK
        string name
    }

    SPECIALIZATIONS {
        bigint specialization_id PK
        string name
        string description
    }

    STAFF_APPLICATIONS {
        bigint id PK
        string email
        string name
        text specialization
        string status
    }

    PASSWORD_RESET_TOKENS {
        bigint token_id PK
        string token
        bigint user_id FK
        timestamp created_at
        timestamp expires_at
        timestamp used_at
    }
